examples/nbi-auth/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genieacs
  labels:
    app.kubernetes.io/name: genieacs
    app.kubernetes.io/component: namespace
